--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "node backend/server.js",
-    "dev": "PORT=3001 concurrently \"npm run server\" \"npm start\""
+    "dev": "PORT=3001 concurrently \"npm run server\" \"npm start\"",
+    "reset-db": "node backend/scripts/resetDb.js"
   },
   "browserslist": {
     "production": [
